# app/Models/Order.php
@@ -8,13 +8,15 @@ use Illuminate\Database\Eloquent\Model;
 /**
  * @OA\Schema(
  *     schema="Order",
- *     required={"order_status_id", "start_date", "end_date", "billing_address_id", "shipping_address_id", "shipping_method_id"},
- *     @OA\Property(property="order_status_id", type="integer"),
- *     @OA\Property(property="start_date", type="string", format="date"),
- *     @OA\Property(property="end_date", type="string", format="date"),
- *     @OA\Property(property="billing_address_id", type="integer"),
- *     @OA\Property(property="shipping_address_id", type="integer"),
- *     @OA\Property(property="shipping_method_id", type="integer"),
+ *     required={"customer_id", "order_status_id", "shipping_method_id", "billing_address_id", "shipping_address_id"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="customer_id", type="integer", example=1),
+ *     @OA\Property(property="order_status_id", type="integer", example=1),
+ *     @OA\Property(property="shipping_method_id", type="integer", example=1),
+ *     @OA\Property(property="billing_address_id", type="integer", example=1),
+ *     @OA\Property(property="shipping_address_id", type="integer", example=2),
+ *     @OA\Property(property="start_date", type="string", format="date", example="2024-01-13"),
+ *     @OA\Property(property="end_date", type="string", format="date", example="2024-01-20"),
  * )
  */
 class Order extends Model
