# app/Models/OrderProduct.php
@@ -1,0 +1,50 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * @OA\Schema(
+ *     schema="OrderProduct",
+ *     required={"order_id", "product_id", "quantity"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="order_id", type="integer", example=1),
+ *     @OA\Property(property="product_id", type="integer", example=1),
+ *     @OA\Property(property="quantity", type="integer", example=2),
+ * )
+ */
+class OrderProduct extends Model
+{
+    use HasFactory;
+
+    protected $table = 'order_product';
+
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = [
+        'order_id',
+        'product_id',
+        'quantity',
+    ];
+
+    /**
+     * Get the order that owns the order product.
+     */
+    public function order()
+    {
+        return $this->belongsTo(Order::class);
+    }
+
+    /**
+     * Get the product that owns the order product.
+     */
+    public function product()
+    {
+        return $this->belongsTo(Product::class);
+    }
+}
